add  page function

--- a/magazin/index.html
+++ b/magazin/index.html
@@ -37,7 +37,7 @@ body{
 							display: 'double',
 							when: {
 								turned: function(e, page) {
-									/*console.log('Current view: ', $(this).turn('view'));*/
+									console.log('Current view: ', $(this).turn('view'));
 								}
 							}
 						});
